<resources>
    <string name="app_name">Misbahati</string>
    <string name="dhikr">Dhikr du jour</string>
    <string name="prayOf">Supplications prophétiques</string>
    <string name="zero">0</string>
    <string name="reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="failed_msg">لا يوجد تاريخ</string>
    <string name="today">Aujourd\'hui</string>
    <string name="qibla">Qibla</string>
    <string name="mosque">Mosquées</string>
    <string name="points">Plus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>